--- a/medmap_frontend/package.json
+++ b/medmap_frontend/package.json
@@ -15,7 +15,6 @@
     "react": "^18.2.0",
     "react-chat-engine-advanced": "^0.1.28",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.8",
     "web-vitals": "^2.1.4"
@@ -47,5 +46,8 @@
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "react-router-dom": "^6.11.1"
+  }
 }
